--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,6 +14,7 @@
     "lib"
   ],
   "publishConfig": {
+    "access": "public",
     "registry": "http://registry.npmjs.org/"
   },
   "scripts": {
@@ -21,5 +22,6 @@
   },
   "devDependencies": {
     "@echo-cli/utils": "^0.0.1"
-  }
+  },
+  "gitHead": "e65f4c5546df214eaa1bf7af91e81ef2f19a51c7"
 }
