--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -25,8 +25,10 @@
   },
   "dependencies": {
     "@echo-cli/log": "file:../../utils/log",
+    "colors": "^1.4.0",
     "import-local": "^3.0.2",
-    "npmlog": "^4.1.2"
+    "npmlog": "^4.1.2",
+    "semver": "^7.3.5"
   },
   "gitHead": "e65f4c5546df214eaa1bf7af91e81ef2f19a51c7"
 }
