--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -28,8 +28,10 @@
     "colors": "^1.4.0",
     "import-local": "^3.0.2",
     "npmlog": "^4.1.2",
+    "path-exists": "^4.0.0",
     "root-check": "^1.0.0",
-    "semver": "^7.3.5"
+    "semver": "^7.3.5",
+    "user-home": "^3.0.0"
   },
   "gitHead": "e65f4c5546df214eaa1bf7af91e81ef2f19a51c7"
 }
