--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@echo-cli/log": "file:../../utils/log",
     "colors": "^1.4.0",
+    "dotenv": "^8.2.0",
     "import-local": "^3.0.2",
     "minimist": "^1.2.5",
     "npmlog": "^4.1.2",
