--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -24,6 +24,7 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
+    "@echo-cli/exec": "file:../exec",
     "@echo-cli/get-npm-info": "file:../../utils/get-npm-info",
     "@echo-cli/log": "file:../../utils/log",
     "@echo-cli/init": "file:../../commands/init",
