chore: 增加package models

--- a/models/package/package.json
+++ b/models/package/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@echo-cli/exec",
+  "name": "@echo-cli/package",
   "version": "1.0.0",
-  "description": "exec",
+  "description": "> TODO: description",
   "author": "Echoting <870917335@qq.com>",
   "homepage": "https://github.com/Echoting/echo-cli#readme",
   "license": "ISC",
@@ -27,6 +27,6 @@
     "url": "https://github.com/Echoting/echo-cli/issues"
   },
   "dependencies": {
-    "@echo-cli/package": "file:../../models/package"
+    "@echo-cli/utils": "file:../../utils/utils"
   }
 }
