chore: 判断文件是否存在

--- a/model/package/package.json
+++ b/model/package/package.json
@@ -30,7 +30,9 @@
     "@echo-cli/format-path": "file:../../utils/format-path",
     "@echo-cli/log": "file:../../utils/log",
     "@echo-cli/utils": "file:../../utils/utils",
+    "@echo-cli/get-npm-info": "file:../../utils/get-npm-info",
     "npminstall": "^4.11.0",
+    "path-exists": "^4.0.0",
     "pkg-dir": "^5.0.0"
   }
 }
